@startuml

title __APP's Class Diagram__\n

  package com.example.alvindrakes.my_fitness_tracker {
    class BuildConfig {
    }
  }
  

  package com.example.alvindrakes.my_fitness_tracker {
    class DetailsPage {
    }
  }
  

  package com.example.alvindrakes.my_fitness_tracker {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.example.alvindrakes.my_fitness_tracker {
    class MainActivity {
    }
  }
  

  package com.example.alvindrakes.my_fitness_tracker {
    package com.example.alvindrakes.my_fitness_tracker.ContentProvider {
      class MyContentProvider {
      }
    }
  }
  

  package com.example.alvindrakes.my_fitness_tracker {
    class MyDBOpenHelper {
    }
  }
  

  package android.arch.core {
    class R {
    }
  }
  

  package androidx.versionedparcelable {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.livedata {
      class R {
      }
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.viewmodel {
      class R {
      }
    }
  }
  

  package android.support.compat {
    class R {
    }
  }
  

  package android.support.customview {
    class R {
    }
  }
  

  package android.support.coreutils {
    class R {
    }
  }
  

  package android.support.design {
    class R {
    }
  }
  

  package android.support.slidingpanelayout {
    class R {
    }
  }
  

  package android.support.coordinatorlayout {
    class R {
    }
  }
  

  package android.support.coreui {
    class R {
    }
  }
  

  package android.support.v7.appcompat {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.livedata {
      package android.arch.lifecycle.livedata.core {
        class R {
        }
      }
    }
  }
  

  package android.support.drawerlayout {
    class R {
    }
  }
  

  package android.support.interpolator {
    class R {
    }
  }
  

  package android.support.loader {
    class R {
    }
  }
  

  package android.support.fragment {
    class R {
    }
  }
  

  package android.support.constraint {
    class R {
    }
  }
  

  package android.support.v7.viewpager {
    class R {
    }
  }
  

  package android.support.print {
    class R {
    }
  }
  

  package android.support.v7.cardview {
    class R {
    }
  }
  

  package android.support.transition {
    class R {
    }
  }
  

  package com.example.alvindrakes.my_fitness_tracker {
    class R {
    }
  }
  

  package android.support.asynclayoutinflater {
    class R {
    }
  }
  

  package android.support.localbroadcastmanager {
    class R {
    }
  }
  

  package android.support.documentfile {
    class R {
    }
  }
  

  package android.support.v7.recyclerview {
    class R {
    }
  }
  

  package android.support.swiperefreshlayout {
    class R {
    }
  }
  

  package android.support.graphics.drawable {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    class R {
    }
  }
  

  package android.support.cursoradapter {
    class R {
    }
  }
  

  package com.example.alvindrakes.my_fitness_tracker {
    class TrackerLog {
    }
  }
  

  package com.example.alvindrakes.my_fitness_tracker {
    class TrackerService {
    }
  }
  

  DetailsPage -up-|> AppCompatActivity
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- TrackerService : trackerService
  MyContentProvider -up-|> ContentProvider
  MyContentProvider o-- MyDBOpenHelper : myDB
  MyDBOpenHelper -up-|> SQLiteOpenHelper
  TrackerService -up-|> LocationListener
  TrackerService -up-|> Service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
